Fixed issue with z-index and the navbar after php convert

--- a/scss/layout/_mobile-sidebar.scss
+++ b/scss/layout/_mobile-sidebar.scss
@@ -339,6 +339,7 @@ body.sidebar-active {
 
 body.sidebar-active .sidebar-menu {
     right: 0; // Sidebar stays fixed
+    z-index: 1500; // Higher than navigation popouts when active
 }
 
 body.sidebar-active .screen-overlay {
